--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
    method:'POST',
    headers:
    {   'Accept': 'application/json',
-      'Content-Type': 'application/json'},
+      'Content-Type': 'application/json',
+   'Access-Control-Allow-Origin':'*'},
    mode: 'cors',
    body: JSON.stringify({"productItem":"somethingNice"})
    })
